<resources>
    <string name="app_name">Teste Componentizacao</string>
    <string name="meu_beats">Meu Beats</string>
    <string name="especializados_em_fones_para_deejay">Especializados em fones para deejay</string>
    <string name="user">User</string>
    <string name="activity_login_tip">nome cadastrado</string>
    <string name="entrar">Entrar</string>
    <string name="ainda_n_o_cadastrado">Ainda não é cadastrado?</string>
    <string name="inscreva_se">Inscreva-se</string>
    <string name="password">Password</string>
    <string name="real_currency">R$</string>
    <string name="currency">20,50</string>
    <string name="label_reviews">Reviews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="question">\?</string>
    <string name="search">Search</string>
    <string name="model">Modelo 01</string>
    <string name="buy">Comprar</string>
    <string name="compatibility">Compatibilidade</string>
    <string name="connection">Conexão</string>
    <string name="power">Alimentação</string>
    <string name="autonomy">Autonomia</string>
    <string name="height">Altura</string>
    <string name="capture">Captação</string>
    <string name="username">User name</string>
    <string name="first_last_name">First and last name</string>
    <string name="already_registered">Já sou cadastrado.</string>
    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="bem_simples_e_r_pido">É bem simples e rápido</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="biometric_description">Insira sua digital ou o seu rosto para logar</string>
    <string name="biometric_title">Login Biométrico</string>
</resources>