<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/activity_login_img_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/character_image"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/activity_login_img_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_gradient"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="15pt"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="15pt"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/activity_login_label_my_beats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/meu_beats"
                android:textColor="@color/white"
                android:textSize="45sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_login_label_merchan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/especializados_em_fones_para_deejay"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_login_label_my_beats" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_login_til_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_sub_username"
                android:textColorHint="@color/white_translucent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:theme="@style/MyCustomEditTextStyle"
                app:helperText="@string/activity_login_tip"
                app:helperTextTextColor="@color/login_tip_message"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/activity_login_label_merchan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_login_edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/user"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textColor="@color/light_grey"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_login_til_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:theme="@style/MyCustomEditTextStyle"
                android:textColorHint="@color/white_translucent"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/activity_login_til_username"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white_translucent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_login_edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:textColor="@color/light_grey"
                    android:maxLines="@integer/material_motion_duration_long_1"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/activity_login_button_login"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="49dp"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/entrar"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/activity_login_til_password" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/activity_login_button_login">

                <TextView
                    android:id="@+id/activity_login_signin_txt_ask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/ainda_n_o_cadastrado"
                    android:textColor="@color/light_grey" />

                <TextView
                    android:id="@+id/activity_login_signin_txt_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/inscreva_se"
                    android:textColor="@color/login_label" />
            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/center_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>