<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:toos="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_300"
    android:layout_marginBottom="0.5dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_list_card"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="10dp"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/fragment_list_img_headset_mini"
            android:layout_width="45dp"
            android:layout_height="45dp"
            toos:src="@drawable/headset"
            android:layout_gravity="center_vertical|center_horizontal"
            toos:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_list_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dm_sans_bold"
        android:textColor="@color/white"
        android:textSize="@dimen/text_list_size"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_list_txt_label_currency"
        app:layout_constraintStart_toEndOf="@+id/fragment_list_card"
        app:layout_constraintTop_toTopOf="parent"
        toos:text="Fone modelo 02" />

    <ImageView
        android:id="@+id/fragment_list_img_star"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_list_card"
        app:layout_constraintStart_toStartOf="@+id/fragment_list_txt_title"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_txt_title"
        android:src="@drawable/ic_star" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_list_txt_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/dm_sans_regular"
        android:textColor="@color/white"
        android:textSize="@dimen/text_list_info"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_list_img_star"
        app:layout_constraintStart_toEndOf="@+id/fragment_list_img_star"
        app:layout_constraintTop_toTopOf="@+id/fragment_list_img_star"
        toos:text="4.6" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_list_txt_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/dm_sans_regular"
        android:textColor="@color/white"
        android:textSize="@dimen/text_list_info"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_list_img_star"
        app:layout_constraintStart_toEndOf="@+id/fragment_list_txt_rating"
        app:layout_constraintTop_toTopOf="@+id/fragment_list_img_star"
        toos:text="86" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_list_txt_reviews_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/dm_sans_regular"
        android:textColor="@color/white"
        android:textSize="@dimen/text_list_info"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_list_img_star"
        app:layout_constraintStart_toEndOf="@+id/fragment_list_txt_reviews"
        app:layout_constraintTop_toTopOf="@+id/fragment_list_img_star"
        toos:text="@string/label_reviews" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_list_txt_label_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/real_currency"
        android:fontFamily="@font/dm_sans_bold"
        android:textColor="@color/primary_300"
        android:textSize="@dimen/text_list_size"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_list_card"
        app:layout_constraintEnd_toStartOf="@+id/fragment_list_txt_price"
        app:layout_constraintTop_toTopOf="@+id/fragment_list_card"
         />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_list_txt_price"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/dm_sans_bold"
        android:textColor="@color/primary_300"
        android:textSize="@dimen/text_list_size"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_list_txt_label_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_list_txt_label_currency"
        toos:text="@string/currency" />

</androidx.constraintlayout.widget.ConstraintLayout>